--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,50 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-light">
+  <!-- Barra de Navegación con Botones -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+          <!-- Logo -->
+          <a class="navbar-brand" href="#">
+              <img src="/api/placeholder/30/30" alt="Logo" class="d-inline-block align-text-top me-2">
+              Sistema
+          </a>
+
+          <!-- Botón hamburguesa -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- Contenido colapsable -->
+          <div class="collapse navbar-collapse" id="navbarContent">
+              <!-- Botones principales -->
+              <div class="main-nav-buttons">
+                  <button class="btn btn-primary nav-button" [routerLink]="['/listadoCarreras']" routerLinkActive="router-link-active" >
+                      Carreras
+                  </button>
+                  <button class="btn btn-success nav-button" [[routerLink]="['/listadoAlumnos']" routerLinkActive="router-link-active" ]>
+                      Alumnos
+                  </button>
+              </div>
+
+              <!-- Búsqueda -->
+              <form class="d-flex ms-auto">
+                  <input class="form-control me-2" type="search" placeholder="Buscar...">
+                  <button class="btn btn-outline-light" type="submit">Buscar</button>
+              </form>
+          </div>
+      </div>
+  </nav>
+
+  <!-- Sección Principal -->
+  <div class="container">
+      <div class="main-content">
+          <!-- Contenido dinámico irá aquí -->
+      </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   
   <app-root></app-root>
 </body>
